registration form:all radio button validation works

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 		 </div>
 		 	<fieldset>
 		 		<legend>Registration Form</legend>
-		 			<form name="customer" enctype="multipart/form-data" method="post" action="echo.php">
+<!--		 			<form name="customer" enctype="multipart/form-data" method="post" action="echo.php">  -->
+						<form>
 						<label for="firstName">First Name:* </label>
 						<input type="text" name="firstName" size=30 id="firstName" >
 					
@@ -104,7 +105,7 @@
 						<label for="zipcode">Zipcode:*</label>
 						<input type="text" name="zipcode" size=10 id=zipcode><br>
 						
-						<label for="primaryPhone">Primary Phone:</label>
+						<label for="primaryPhone">Primary Phone*:</label>
 						(<input type="text" name="area_phone" size="5" maxlength="3" />)  
                  <input type="text" name="prefix_phone" size="5" maxlength="3" />
                 <input type="text" name="phone" size="8" maxlength="4" /><br>
