added picture upload function, and validated size

--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
 						<input type="radio" name="ageGroup" value=adult id=adult>
 						<label for="adult">Adult</label>
 						<input type="radio" name="ageGroup" value=teen id=teen>
-						<label for="teen">Teen</label>
+						<label for="teen">Teen</label><br>
+						
+						<label for="userPic">Add a picture</label>
+						<input type="file" name="user_pic" accept="image/*" />
+<!--   				 	<input type="button" id="fbutton" value="validate" />-->
 						
 						<hr>
 						 <div class=buttons>
