--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		
 		<div class="navbar">
 			<ul>
-				<li><a href="">HOME</a> </li>
+				<li><a href="#">HOME</a> </li>
 				<li><a href="#aboutUs">ABOUT US</a> </li>
 				<li><a href="#signUp">SIGN UP</a> </li>
 			</ul>
